[frontend] qianfan插件获取知识库列表逻辑修改